# CMakeList.txt : CMake project for week4, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.1)

project ("week4")

# Add source to this project's executable.
add_executable (week7 "week7.cpp" "Fraction.h" "Fraction.cpp" "vectorExample.h" "dequeExample.h" "mapExample.h")

# TODO: Add tests and install targets if needed.
